fix: filters collapse styles

--- a/src/components/ProductControls/FiltersBlock/FiltersBlock.module.css
+++ b/src/components/ProductControls/FiltersBlock/FiltersBlock.module.css
@@ -99,3 +99,9 @@
     width: 100% !important;
   }
 }
+
+.filter-collapse {
+  span {
+    line-height: 2.25;
+  }
+}
